--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,15 +8,16 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".PedidoActivity"></activity>
-        <activity android:name=".LoginActivity">
+        <activity android:name=".PedidoActivity" />
+        <activity android:name=".LoginActivity"/>
+        <activity android:name=".MenuActivity" />
+        <activity android:name=".SplashActivity"
+        android:theme="@style/Fullscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MenuActivity"></activity>
     </application>
 
 </manifest>
